--- a/docker/Dockerfile-latest
+++ b/docker/Dockerfile-latest
@@ -1,4 +1,4 @@
-FROM imiobe/iadelib:base as builder
+FROM harbor.imio.be/delib/iadelib:base as builder
 
 ARG PROFILE="communes.cfg"
 
@@ -78,12 +78,12 @@ RUN apt-get update \
   && rm /plone/get_run_scripts.sh
 
 
-FROM imiobe/iadelib:base
+FROM harbor.imio.be/delib/iadelib:base
 ENV DELIB_MAJOR=4.2
 
 LABEL delib=$DELIB_VERSION \
       name="ia.Delib" \
-      description="ia.Delib image, based on imiobe/plone-base:4.3.20-ubuntu-20.04" \
+      description="ia.Delib image, based on harbor.imio.be/common/plone-base:4.3.20-ubuntu-20.04" \
       maintainer="iMio"
 
 COPY --from=builder /usr/local/lib/python2.7/dist-packages /usr/local/lib/python2.7/dist-packages
