--- a/docker/docker-compose-minimal.yml
+++ b/docker/docker-compose-minimal.yml
@@ -20,7 +20,7 @@ services:
     mem_swappiness: 0
 
   zeo:
-    image: imiobe/iadelib:latest
+    image: harbor.imio.be/delib/iadelib:latest
     command: zeoserver
     environment:
       - HOSTNAME=zeo
@@ -36,7 +36,7 @@ services:
       test: "/plone/zeo_healthcheck.sh"
 
   instance:
-    image: imiobe/iadelib:latest
+    image: harbor.imio.be/delib/iadelib:latest
     command: instance
     ports:
       - "20081:8081"
