--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -20,7 +20,7 @@ services:
     mem_swappiness: 0
 
   zeo:
-    image: imiobe/iadelib:latest
+    image: harbor.imio.be/delib/iadelib:latest
     command: zeoserver
     environment:
       - HOSTNAME=zeo
@@ -36,7 +36,7 @@ services:
       test: "/plone/zeo_healthcheck.sh"
 
   instance:
-    image: imiobe/iadelib:latest
+    image: harbor.imio.be/delib/iadelib:latest
     command: instance
     ports:
       - "20081:8081"
@@ -63,7 +63,7 @@ services:
       SERVICE_NAME: "instance1"
 
   worker-async:
-    image: imiobe/iadelib:latest
+    image: harbor.imio.be/delib/iadelib:latest
     command: instance-async
     networks:
       - delib_internal
@@ -86,7 +86,7 @@ services:
       SERVICE_NAME: "worker-async"
 
   worker-amqp:
-    image: imiobe/iadelib:latest
+    image: harbor.imio.be/delib/iadelib:latest
     command: instance-amqp
     ports:
       - "20085:8286"
@@ -119,7 +119,7 @@ services:
       SERVICE_NAME: "worker-amqp"
 
   maintenance:
-    image: imiobe/iadelib:latest
+    image: harbor.imio.be/delib/iadelib:latest
     ports:
       - "20089:8080"
     networks:
