--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -20,7 +20,7 @@ jobs:
         with:
           IMAGE_NAME: ${{ env.IMAGE_NAME }}
           IMAGE_TAGS: |
-            "${{ secrets.HARBOR_URL }}/${{ env.IMAGE_NAME }}:latest"
+            ${{ secrets.HARBOR_URL }}/${{ env.IMAGE_NAME }}:latest
           REGISTRY_URL: ${{ secrets.HARBOR_URL }}
           REGISTRY_USERNAME: ${{ secrets.DELIB_HARBOR_USERNAME }}
           REGISTRY_PASSWORD: ${{ secrets.DELIB_HARBOR_PASSWORD }}
@@ -37,7 +37,7 @@ jobs:
         with:
           IMAGE_NAME: ${{ env.IMAGE_NAME }}
           IMAGE_TAGS: |
-            "${{ secrets.HARBOR_URL }}/${{ env.IMAGE_NAME }}:dev"
+            ${{ secrets.HARBOR_URL }}/${{ env.IMAGE_NAME }}:dev
           REGISTRY_URL: ${{ secrets.HARBOR_URL }}
           REGISTRY_USERNAME: ${{ secrets.DELIB_HARBOR_USERNAME }}
           REGISTRY_PASSWORD: ${{ secrets.DELIB_HARBOR_PASSWORD }}
