--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -13,10 +13,10 @@ env:
 
 jobs:
   docker-latest:
-    runs-on: gha-runners-delib
+    runs-on: gha-runners-delib-py3
     steps:
       - name: Build and publish communes image to harbor
-        uses: IMIO/gha/build-push-notify@v3.3
+        uses: IMIO/gha/build-push-notify@v3.9.3
         with:
           IMAGE_NAME: ${{ env.IMAGE_NAME }}
           IMAGE_TAGS: |
@@ -30,10 +30,10 @@ jobs:
           BUILD_ARGS: 'PROFILE=communes.cfg'
 
   docker-dev:
-    runs-on: gha-runners-delib
+    runs-on: gha-runners-delib-py3
     steps:  
       - name: Build and publish dev image
-        uses: IMIO/gha/build-push-notify@v3.3
+        uses: IMIO/gha/build-push-notify@v3.9.3
         with:
           IMAGE_NAME: ${{ env.IMAGE_NAME }}
           IMAGE_TAGS: |
