--- a/versions.cfg
+++ b/versions.cfg
@@ -5,7 +5,7 @@ pip = 20.3.4
 Products.DocFinderTab = 1.0.5
 mr.developer = 2.0.0
 
-Products.PloneMeeting = 4.2.11.2
+Products.PloneMeeting = 4.2.12rc1
 
 # profile specific versions
 Products.MeetingCommunes = 4.2.9
