Use buildout.environ

--- a/base.cfg
+++ b/base.cfg
@@ -1,6 +1,7 @@
 [buildout]
 
 extensions =
+    buildout.environ
     mr.developer
 allow-picked-versions = false
 show-picked-versions = true
@@ -70,6 +71,7 @@ environment-vars =
     DEFAULT_LANGUAGE fr
     SITE_ID ${port:plone-path}
     ADMIN_PASSWORD ${port:admin-password}
+    PM_BRANCH_NAME MPMCHAC-5_itemWFValidationLevels_groups_managing_item
 
 [instance1]
 #effective-user =
