--- a/versions.cfg
+++ b/versions.cfg
@@ -5,7 +5,7 @@ pip = 20.3.4
 Products.DocFinderTab = 1.0.5
 mr.developer = 2.0.0
 
-Products.PloneMeeting = 4.2.14
+Products.PloneMeeting = 4.2.15
 
 # profile specific versions
 Products.MeetingCommunes = 4.2.10
@@ -20,7 +20,7 @@ collective.behavior.talcondition = 1.0a1
 collective.ckeditor = 4.10.1
 collective.compoundcriterion = 0.7
 collective.contact.core = 1.39
-collective.contact.plonegroup = 1.51
+collective.contact.plonegroup = 1.52
 collective.contact.widget = 1.13
 collective.dexteritytextindexer = 2.2.1
 collective.documentgenerator = 3.43
@@ -45,7 +45,7 @@ ftw.labels = 2.0.1
 imio.annex = 2.24
 imio.actionspanel = 1.69
 imio.dashboard = 2.12
-imio.helpers = 1.0.0rc3
+imio.helpers = 1.2.2
 imio.history = 1.36
 imio.migrator = 1.34
 imio.pm.locales = 4.2.22
