Pinned imio.fpaudit and use sources in dev

--- a/versions.cfg
+++ b/versions.cfg
@@ -45,6 +45,7 @@ ftw.labels = 2.0.1
 imio.annex = 2.24
 imio.actionspanel = 1.69
 imio.dashboard = 2.12
+imio.fpaudit = 0.1.0
 imio.helpers = 1.2.2
 imio.history = 1.36
 imio.migrator = 1.34
