--- a/dev.cfg
+++ b/dev.cfg
@@ -19,6 +19,7 @@ auto-checkout =
     imio.actionspanel
     imio.annex
     imio.dashboard
+    imio.fpaudit
     imio.helpers
     imio.history
     imio.migrator
