--- a/sources.cfg
+++ b/sources.cfg
@@ -44,7 +44,7 @@ ftw.labels = git ${remotes:ftw}/ftw.labels.git pushurl=${remotes:ftw_push}/ftw.l
 imio.actionspanel = git ${remotes:imio}/imio.actionspanel.git pushurl=${remotes:imio_push}/imio.actionspanel.git
 imio.annex = git ${remotes:imio}/imio.annex.git pushurl=${remotes:imio_push}/imio.annex.git
 imio.dashboard = git ${remotes:imio}/imio.dashboard.git pushurl=${remotes:imio_push}/imio.dashboard.git
-imio.fpaudit = git ${remotes:imio}/imio.fpaudit.git pushurl=${remotes:imio_push}/imio.fpaudit.git
+imio.fpaudit = git ${remotes:imio}/imio.fpaudit.git pushurl=${remotes:imio_push}/imio.fpaudit.git branch=main
 imio.helpers = git ${remotes:imio}/imio.helpers.git pushurl=${remotes:imio_push}/imio.helpers.git
 imio.history = git ${remotes:imio}/imio.history.git pushurl=${remotes:imio_push}/imio.history.git
 imio.migrator = git ${remotes:imio}/imio.migrator.git pushurl=${remotes:imio_push}/imio.migrator.git
