Use : - Products.PloneMeeting = 4.2.16 - Products.MeetingCommunes = 4.2.11 - collective.contact.core = 1.43.1 - collective.documentgenerator = 3.44 - collective.eeafaceted.batchactions = 1.16.2 - imio.fpaudit = 0.1.1 - imio.pm.locales = 4.2.23 - plonetheme.imioapps = 2.51

--- a/versions.cfg
+++ b/versions.cfg
@@ -5,10 +5,10 @@ pip = 20.3.4
 Products.DocFinderTab = 1.0.5
 mr.developer = 2.0.2
 
-Products.PloneMeeting = 4.2.14rc2
+Products.PloneMeeting = 4.2.16
 
 # profile specific versions
-Products.MeetingCommunes = 4.2.10
+Products.MeetingCommunes = 4.2.11
 
 # Required by:
 # Products.PloneMeeting
@@ -19,12 +19,12 @@ collective.behavior.internalnumber = 0.4
 collective.behavior.talcondition = 1.0a1
 collective.ckeditor = 4.10.1
 collective.compoundcriterion = 0.7
-collective.contact.core = 1.39
+collective.contact.core = 1.43.1
 collective.contact.plonegroup = 1.52
 collective.contact.widget = 1.13
 collective.dexteritytextindexer = 2.2.1
-collective.documentgenerator = 3.43
-collective.eeafaceted.batchactions = 1.16.1
+collective.documentgenerator = 3.44
+collective.eeafaceted.batchactions = 1.16.2
 collective.eeafaceted.collectionwidget = 1.17
 collective.eeafaceted.dashboard = 0.20
 collective.eeafaceted.z3ctable = 2.27
@@ -45,11 +45,11 @@ ftw.labels = 2.0.1
 imio.annex = 2.24
 imio.actionspanel = 1.69
 imio.dashboard = 2.12
-imio.fpaudit = 0.1.0
+imio.fpaudit = 0.1.1
 imio.helpers = 1.2.2
 imio.history = 1.36
 imio.migrator = 1.34
-imio.pm.locales = 4.2.20.4
+imio.pm.locales = 4.2.23
 imio.prettylink = 1.22
 imio.pyutils = 1.1.2
 imio.webspellchecker = 1.0b7
@@ -58,7 +58,7 @@ plone.app.versioningbehavior = 1.3.1
 plone.formwidget.masterselect = 1.7
 # plone.formwidget.namedfile = 2.0.6 has a display bug when editing existing file
 plone.formwidget.namedfile = 2.0.5
-plonetheme.imioapps = 2.50
+plonetheme.imioapps = 2.51
 Products.CPUtils = 1.25
 Products.PasswordStrength = 0.4
 python-dateutil = 2.7.3
